Добавит файлы main и utils с функцией генерации случайного уникального числа

--- a/index.html
+++ b/index.html
@@ -235,5 +235,6 @@
     </template>
 
     <script defer src="/js/function.js"></script>
+    <script type = 'module' defer src="/js/main.js"></script>
 </body>
 </html>
