добавит закрытие большой картинки по клику на кнопку закрытия и удалит слушатель события

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 
   <!-- Шаблон изображения случайного пользователя -->
   <template id="picture">
-    <a href="#" class="picture" id = '1'>
-      <img class="picture__img" src="" width="182" height="182" alt="Случайная фотография">
+    <a href="#" class="picture" >
+      <img class="picture__img" id = '1' src="" width="182" height="182" alt="Случайная фотография">
       <p class="picture__info">
         <span class="picture__comments"></span>
         <span class="picture__likes"></span>
@@ -246,7 +246,7 @@
       </li>
     </template>
 
-    <script defer src="/js/function.js"></script>
+    <!-- <script defer src="/js/function.js"></script> -->
     <script type = 'module' defer src="/js/main.js"></script>
 </body>
 </html>
